--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,31 @@
 #root {
-  max-width: 1280px;
+  max-width: 900px;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
+  width: 100%;
 }
 
 .read-the-docs {
   color: #888;
+}
+
+.todo {
+  background-color: #f5f5f5;
+}
+
+.todo > input {
+  width: 90%;
+  height: 94px;
+  background-color: #fefefe;
+  border: none;
+  margin-bottom: 2px;
+}
+
+.todo_controls {
+  display: flex;
+  justify-content: space-between;
+  width: 90%;
+  margin: 0 auto;
+  background-color: #fefefe;
 }
