--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
+  color: rgba(202, 128, 128, 0.8);
   background-color: #242424;
 
   font-synthesis: none;
@@ -31,8 +31,12 @@ body {
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 7.2em;
   line-height: 1.1;
+  color: rgba(202, 128, 128, 0.3);
+  font-weight: 100;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  margin: 10px;
 }
 
 button {
