--- a/src/components/task/Task.css
+++ b/src/components/task/Task.css
@@ -1,12 +1,30 @@
 .task {
+  position: relative;
   display: flex;
   width: 90%;
   height: 95px;
   margin: 2px auto;
   gap: 1px;
   background-color: #fefefe;
+  align-items: center;
 }
 
-.task > input[type="radio"] {
-  width: 42px;
+.task_checkbox {
+  display: flex;
+  position: relative;
+}
+
+.task_checkbox_border {
+  width: 28px;
+  height: 28px;
+  border-radius: 50%;
+  border: 1px solid gray;
+}
+
+.task_checkbox_check {
+  width: 16px;
+  height: 16px;
+  position: absolute;
+  top: 8px;
+  left: 5px;
 }
