--- a/src/index.css
+++ b/src/index.css
@@ -46,9 +46,10 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: none;
   cursor: pointer;
   transition: border-color 0.25s;
+  color: #acacac;
 }
 button:hover {
   border-color: #646cff;
