--- a/src/components/task/Task.css
+++ b/src/components/task/Task.css
@@ -7,11 +7,13 @@
   gap: 1px;
   background-color: #fefefe;
   align-items: center;
+  padding: 0 10px;
 }
 
 .task_checkbox {
   display: flex;
   position: relative;
+  margin-right: 35px;
 }
 
 .task_checkbox_border {
